deploy/nexodus/base/auth/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    spec:
      containers:
        - image: quay.io/keycloak/keycloak:20.0.3
          name: keycloak
          ports:
            - name: http
              containerPort: 8080
            - name: https
              containerPort: 8443
          readinessProbe:
            httpGet:
              path: /realms/nexodus
              port: 8080
          volumeMounts:
            - name: certificate
              mountPath: "/etc/pki/tls/certs"
              readOnly: true
            - name: privatekey
              mountPath: "/etc/pki/tls/private"
              readOnly: true
            - name: realm
              mountPath: "/opt/keycloak/data/import"
              readOnly: true
          command: ["/opt/keycloak/bin/kc.sh"]
          args: ["start", "--import-realm", "--features=preview", "--features=declarative-user-profile"]
      restartPolicy: Always
      volumes:
        - name: certificate
          secret:
            secretName: nexodus-auth-cert
            items:
              - key: tls.crt
                path: cert.pem
            optional: false
        - name: privatekey
          secret:
            secretName: nexodus-auth-cert
            items:
              - key: tls.key
                path: cert.key
            optional: false
        - name: realm
          configMap:
            name: realm
            items:
              - key: nexodus.json
                path: nexodus.json
