deploy/nexodus/base/auth/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  ports:
    - port: 8080
      targetPort: 8080
